# Senseless

./: .clang-format  .clang-tidy  .cmake-format.py  .gitignore  CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: main.yml
cmake/: AddTargetOptions.cmake  AddTargetWarnings.cmake  CheckAvailableFlags.cmake  CheckAvailableTools.cmake  DeclareProjectOptions.cmake  Doxygen.cmake  PrintOptions.cmake  ProjectSetup.cmake  Sanitizer.cmake  SetupVcpkg.cmake
include/: Command.hpp  Entity.hpp  EntityFactory.hpp  EntitySetting.hpp  EntityType.hpp  GeometryUtilities.hpp  Level.hpp  LevelFactory.hpp  PhysicalObject.hpp  PhysicalObjectDTO.hpp  Player.hpp  StateDTO.hpp  StateDTOAssembler.hpp  World.hpp  factorial.hpp
src/: CMakeLists.txt  Entity.cpp  GeometricUtilities.cpp  Level.cpp  PhysicalObject.cpp  Player.cpp  factorial.cpp
src/Entities/: Doorman.cpp  Doorman.hpp  Entity.cpp  EntityFactory.cpp  Luis.cpp  Luis.hpp  Magnetick.cpp  Magnetick.hpp  Player.cpp  Stalker.cpp  Stalker.hpp  Vagrant.cpp  Vagrant.hpp
src/GeometryUtilities/: Point.cpp  Rectangle.cpp  Segment.cpp  Shape.cpp  Vec2.cpp
test/: CMakeLists.txt  test_GeometryUtilities.cpp  test_factorial.cpp
test/GeometryUtilitiesTest/: CMakeLists.txt  PointTest.cpp  RectangleTest.cpp  SegmentTest.cpp  ShapeTest.cpp  Vec2Test.cpp
